Bug 161751 Can't switch themes when certain prefs are set r=bsmedberg sr=darin